<resources>
    <string name="app_name">YadaYadaRide</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="logoDescription">Yada Yada Ride logo</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="back">Back</string>
    <string name="phone">Phone number</string>
    <string name="createRide">Create Ride</string>
    <string name="trips">My rides</string>
    <string name="search">Search for ride</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="pickup">Pickup point</string>
    <string name="price">Price</string>
    <string name="maxPassengers">Seats available</string>
    <string name="date">Ride date</string>
    <string name="time">Ride time</string>
    <string name="selectDate">Select date</string>
    <string name="selectTime">Select time</string>
    <string name="noSeats">Number of seats</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="remember">Remember me</string>
    <string name="deleteUser">Delete user account</string>
</resources>
