<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CreateRideActivity">

    <EditText
        android:id="@+id/etFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="100dp"
        android:hint="@string/from" />

    <EditText
        android:id="@+id/etTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/to" />

    <EditText
        android:id="@+id/etPickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pickup" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:layout_weight="0.9"
            android:id="@+id/tvDate" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectDate"
            android:layout_weight="0.1"
            android:id="@+id/btn_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.9"
            android:hint="@string/time"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime"
            android:layout_weight="0.1"
            android:id="@+id/btn_time" />
    </LinearLayout>

    <EditText
        android:id="@+id/etSeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/maxPassengers"
        android:inputType="number" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddRide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addRide"
        android:text="@string/createRide" />
</LinearLayout>