<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SearchActivity">

    <EditText
        android:id="@+id/etSearchFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/from" />

    <EditText
        android:id="@+id/etSearchTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/to" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSearchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selectDate" />

        <Button
            android:id="@+id/btnSearchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/selectDate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSearchSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:layout_gravity="center"
            android:text="@string/noSeats" />

        <Button
            android:id="@+id/btnSearchSeatsMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:onClick="minus"
            android:textSize="20dp"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/tvSearchNoSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="0.4"
            android:text="@string/one" />

        <Button
            android:id="@+id/btnSearchSeatsPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:textSize="20dp"
            android:onClick="plus"
            android:text="@string/plus" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSearchSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="submitSearch"
        android:text="@string/search" />
</LinearLayout>